fix: List creation is made with List.of